k8s/tooling/pihole/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole-service
  annotations:
    metallb.universe.tf/loadBalancerIPs: 192.168.100.239
spec:
  type: LoadBalancer
  selector:
    app: pihole
  ports:
    - port: 80
      name: http
      protocol: TCP
    - port: 53
      name: dns-udp
      protocol: UDP
    - port: 53
      name: dns-tcp
      protocol: TCP
